--- a/task2.html
+++ b/task2.html
@@ -77,14 +77,14 @@
         Below is an example image added using the img tag.
     </p>
 
-    <img 
-        src="https://via.placeholder.com/300" 
-        alt="Sample placeholder image" 
-        width="300"
-        class="sample-image"
-        title="This is a sample image"
-    >
+    <img src ="AIUB_Campus (1).jpg">
 
+    <br>
+
+    <hr>
+    
+    <br>
+    <img src ="https://www.aiub.edu/Files/Uploads/new_campus_pic_3.jpg">
     <hr>
 
     <!-- Back to Top Link -->
