--- a/task5.html
+++ b/task5.html
@@ -10,6 +10,13 @@
 
     <title>Academic Profile - Nadia Nazu</title>
 </head>
+<style>
+    table,
+    tr,
+    td{
+        border : 1px solid black;
+    }
+</style>
 
 <body>
 
@@ -25,7 +32,7 @@
     </header>
 
     <!-- Main Content -->
-    <main>
+
 
         <!-- Biography Section -->
         <section id="biography">
@@ -39,15 +46,15 @@
         <section id="education">
             <h2>Education</h2>
 
-            <table border="1">
+            <table >
                 <caption>Academic Qualifications</caption>
 
                 <thead>
                     <tr>
-                        <th scope="col">Degree</th>
-                        <th scope="col">Institution</th>
-                        <th scope="col">Year</th>
-                        <th scope="col">Result</th>
+                        <th >Degree</th>
+                        <th >Institution</th>
+                        <th> Year</th>
+                        <th >Result</th>
                     </tr>
                 </thead>
 
